--- a/stylesheets/scss/_menus.scss
+++ b/stylesheets/scss/_menus.scss
@@ -220,6 +220,7 @@
 
     .edit-btn {
       margin-left: 8px;
+      margin-right: 8px;
 
       @include query($mobile-1) {
         .content-page & {
